# mealie-auto-tagger

./: .gitignore  Dockerfile  README.md  main.py  setup.py
.devcontainer/: dev.Dockerfile  (+1 more)
mealie-auto-tagger/: .env  .pylintrc  modelResults.md  pyproject.toml  runeval.sh
mealie-auto-tagger/src/: .env  app.py  database.db  main.py  modelEval.py
mealie-auto-tagger/src/db/: init.py
mealie-auto-tagger/src/db/models/: label.py
mealie-auto-tagger/src/db/repos/: LabelRepo.py  ListItemRepo.py
mealie-auto-tagger/src/mealie_auto_tagger/: app.py  main.py  modelEval.py  model_eval.py
mealie-auto-tagger/src/mealie_auto_tagger/caches/: embeddingCache.py  embedding_cache.py  labelEmbeddingCache.py
mealie-auto-tagger/src/mealie_auto_tagger/db/: init.py
mealie-auto-tagger/src/mealie_auto_tagger/mixins/: mealie_requester.py
mealie-auto-tagger/src/mealie_auto_tagger/model/: mealieLableEmbeddings.py  mealie_label_embeddings.py  settings.py
mealie-auto-tagger/src/mealie_auto_tagger/routes/: webhook.py
mealie-auto-tagger/src/mealie_auto_tagger/services/: logging.py  makeNotifier.py  mealieAuth.py  mealieLabels.py  mealieShoppingList.py  mealie_auth.py  mealie_auto_tagger_logging.py  mealie_labels.py  mealie_notifier.py  mealie_shopping_list.py
mealie-auto-tagger/src/model/: mealieLableEmbeddings.py  settings.py
mealie-auto-tagger/src/model/mealie/: notifiedMessage.py  shoppingListItem.py
mealie-auto-tagger/src/routes/: __init__.py  webhook.py
mealie-auto-tagger/src/services/: logging.py  makeNotifier.py  mealieAuth.py  mealieLabels.py  mealieShoppingList.py
mealie-auto-tagger/src/services/embedding/: embeddingService.py
mealie-auto-tagger/tests/: conftest.py
mealie-auto-tagger/tests/caches/: test_embeddingCache.py  test_embedding_cache.py
mealie-auto-tagger/tests/db/repos/: test_LabelRepo.py
mealie-auto-tagger/tests/fixtures/: fake_mealie_http_server.py  mealieLabel.py  mealie_label.py
mealie-auto-tagger/tests/integration/: test_update_new_item.py
(+19 files in other folders)
